--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,6 +26,7 @@ RUN apt update -qq && apt install --no-install-recommends -y \
     lsb-release \
     gnupg2 \
     curl \
+    libeigen3-dev \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install \
@@ -60,6 +61,13 @@ RUN apt-get update && apt-get install -y \
 #Gazebo
 RUN curl -sSL http://get.gazebosim.org | sh
 
+#Install OpenCV 3.4.5
+RUN cd ~/ && git clone -b 3.4.5 https://github.com/opencv/opencv.git && git clone -b 3.4.5 https://github.com/opencv/opencv_contrib.git \
+    && cd ~/opencv && mkdir build && cd build/ \
+    && cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local -D INSTALL_C_EXAMPLES=ON -D WITH_TBB=ON -D WITH_V4L=ON -D WITH_OPENGL=ON \
+       -D OPENCV_EXTRA_MODULES_PATH=~/opencv_contrib/modules/ .. \
+    && make -j $(nproc) && make install && rm -rf ~/opencv && rm -rf ~/opencv_contrib
+
 #Prepare work-space
 RUN mkdir ~/ros2_mara_ws
 WORKDIR /home/root/ros2_mara_ws/
@@ -71,5 +79,5 @@ RUN cd src/HRIM && python3 hrim.py generate models/actuator/servo/servo.xml \
 
 #Compile the work-space
 COPY missing-repos.repos .
-#RUN vcs import src < missing-repos.repos 
-#RUN  bash -c "source /opt/ros/crystal/setup.bash && colcon build --merge-install"
+RUN bash -c "vcs import src < missing-repos.repos || true #Fix me!!"
+RUN  bash -c "source /opt/ros/crystal/setup.bash && colcon build --merge-install --parallel-workers $(nproc)"
