--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,33 +1,6 @@
-FROM ubuntu:bionic
+FROM ros:crystal-ros-base-bionic
 
 MAINTAINER Lander Usategui lander@erlerobotics.com
-
-# setup environment
-ENV LANG C.UTF-8
-ENV LC_ALL C.UTF-8
-
-# setup timezone
-RUN echo 'Etc/UTC' > /etc/timezone && \
-    ln -s /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
-    apt-get update && apt-get install -q -y tzdata && rm -rf /var/lib/apt/lists/*
-
-#Dependencies
-RUN apt update -qq && apt install --no-install-recommends -y \
-    build-essential \
-    cmake \
-    git \
-    python3-sip-dev \
-    python3-numpy \
-    python3-pip \
-    python3-setuptools \
-    wget \
-    libasio-dev \
-    libtinyxml2-dev \
-    lsb-release \
-    gnupg2 \
-    curl \
-    libeigen3-dev \
-    && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install \
     lxml \
@@ -35,27 +8,13 @@ RUN pip3 install \
     tensorflow \
     transforms3d
 
-#ROS2
-# setup keys
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 421C365BD9FF1F717815A3895523BAEEB01FA116
-
-RUN echo "deb http://packages.ros.org/ros2/ubuntu `lsb_release -sc` main" > /etc/apt/sources.list.d/ros2-latest.list
-
 RUN apt update -qq && apt install -y \
     python3-colcon-common-extensions \
-    python3-pip \
-    python-rosdep \
+    curl \
     python3-vcstool \
-    && rm -rf /var/lib/apt/lists/*
-
-#Bootstrap rosdep
-RUN rosdep init \
-    && rosdep update
-
-#Install ros2 packages
-ENV ROS_DISTRO crystal
-RUN apt-get update && apt-get install -y \
-    ros-$ROS_DISTRO-ros-core=0.6.1-0* \
+    python3-numpy \
+    python3-sip-dev \
+    libeigen3-dev \
     && rm -rf /var/lib/apt/lists/*
 
 #Gazebo
@@ -79,5 +38,5 @@ RUN cd src/HRIM && python3 hrim.py generate models/actuator/servo/servo.xml \
 
 #Compile the work-space
 COPY missing-repos.repos .
-RUN bash -c "vcs import src < missing-repos.repos || true #Fix me!!"
+RUN bash -c "vcs import src < missing-repos.repos || true #Fix me!! && rm -rf /home/root/mara_ws/src/realtime_support/tlsf_cpp"
 RUN  bash -c "source /opt/ros/crystal/setup.bash && colcon build --merge-install --parallel-workers $(nproc)"
