Added ENTRYPOINT to Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -58,3 +58,5 @@ RUN  cd /root/gym-gazebo-ros2 && pip3 install -e .
 RUN bash -c "echo 'source ~/gym-gazebo-ros2/provision/mara_setup.sh' >> ~/.bashrc"
 RUN bash -c "source ~/.bashrc"
 WORKDIR /root/gym-gazebo-ros2/
+EXPOSE 11596
+ENTRYPOINT ["bash"]
