Re-work dockerized installation
* Simplyfy Dockerfile
* Remove mara.repos due to the fact that right now is under Acutronic Robotics
* Remove part of the missing-respo.repos file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,8 @@ FROM ros:crystal-ros-base-bionic
 
 MAINTAINER Lander Usategui lander@erlerobotics.com
 
+ENV ROS_DISTRO crystal
+
 RUN pip3 install \
     lxml \
     argcomplete \
@@ -16,31 +18,27 @@ RUN apt update -qq && apt install -y \
     python3-numpy \
     python3-sip-dev \
     libeigen3-dev \
+    wget \
+    ros-$ROS_DISTRO-message-filters ros-$ROS_DISTRO-yaml-cpp-vendor \
+    ros-crystal-urdf ros-$ROS_DISTRO-rttest ros-$ROS_DISTRO-tf2 \
+    ros-$ROS_DISTRO-tf2-geometry-msgs libopencv-dev \
     && rm -rf /var/lib/apt/lists/*
 
 #Gazebo
 RUN curl -sSL http://get.gazebosim.org | sh
 
-#Install OpenCV 3.4.5
-RUN cd ~/ && git clone -b 3.4.5 https://github.com/opencv/opencv.git && git clone -b 3.4.5 https://github.com/opencv/opencv_contrib.git \
-    && cd ~/opencv && mkdir build && cd build/ \
-    && cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local -D INSTALL_C_EXAMPLES=ON -D WITH_TBB=ON -D WITH_V4L=ON -D WITH_OPENGL=ON \
-       -D OPENCV_EXTRA_MODULES_PATH=~/opencv_contrib/modules/ .. \
-    && make -j $(nproc) && make install && rm -rf ~/opencv && rm -rf ~/opencv_contrib
-
 #Prepare work-space
-RUN mkdir /root/ros2_mara_ws
+RUN mkdir -p /root/ros2_mara_ws/src
 WORKDIR /root/ros2_mara_ws
-#RUN wget https://raw.githubusercontent.com/erlerobot/gym-gazebo-ros2/master/provision/mara.repos && vcs import src < mara.repos #Keep this commented until the repo becomes public
-COPY src src
+RUN wget https://raw.githubusercontent.com/AcutronicRobotics/MARA/master/mara-ros2.repos && vcs import src < mara-ros2.repos 
 #Generete HRIM packages
-RUN cd src/HRIM && python3 hrim.py generate models/actuator/servo/servo.xml \
+RUN cd src/hrim && python3 hrim.py generate models/actuator/servo/servo.xml \
     && python3 hrim.py generate models/actuator/gripper/gripper.xml
 
 #Compile the work-space
 COPY missing-repos.repos .
 RUN bash -c "vcs import src < missing-repos.repos"
-RUN  bash -c "source /opt/ros/crystal/setup.bash && colcon build --merge-install --parallel-workers $(nproc) --packages-ignore orocos_kinematics_dynamics tlsf_cpp"
+RUN  bash -c "source /opt/ros/crystal/setup.bash && colcon build --merge-install --parallel-workers $(nproc) --packages-ignore orocos_kinematics_dynamics"
 RUN bash -c "touch /root/ros2_mara_ws/install/share/orocos_kdl/local_setup.sh /root/ros2_mara_ws/install/share/orocos_kdl/local_setup.bash"
 #Baselines
 #RUN cd /home/root && git clone https://github.com/erlerobot/baselines && cd /home/root/baselines && pip3 install -e . #Private repo fix me!
