--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM ros:crystal-ros-base-bionic
 
-MAINTAINER Lander Usategui lander@erlerobotics.com
+LABEL maintainer="Lander Usategui <lander at erlerobotics dot com"
 
 ENV ROS_DISTRO crystal
 #Prepare work-space
