--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -54,7 +54,7 @@ RUN \
   	&& hrim generate models/actuator/servo/servo.xml \
   	&& hrim generate models/actuator/gripper/gripper.xml \
   	#Compile the work-space
-  	&& bash -c "cd /root/ros2_mara_ws && vcs import src < missing-repos.repos \
+  	&& bash -c " cd /root/ros2_mara_ws \
   	&& source /opt/ros/crystal/setup.bash && colcon build --merge-install --parallel-workers $(nproc) --packages-ignore orocos_kinematics_dynamics \
   	&& touch /root/ros2_mara_ws/install/share/orocos_kdl/local_setup.sh /root/ros2_mara_ws/install/share/orocos_kdl/local_setup.bash \
   	&& cd /root/ && git clone https://github.com/ros/urdf_parser_py.git -b melodic-devel && cd /root/urdf_parser_py && pip3 install -e . \
@@ -63,7 +63,7 @@ RUN \
         && cd /root && git clone https://github.com/AcutronicRobotics/gym-gazebo2 && cd /root/gym-gazebo2 && pip3 install -e . \
   	#Load provisioning script
   	&& echo 'source /root/gym-gazebo2/provision/mara_setup.sh' >> ~/.bashrc \
-  	&& source ~/.bashrc"
+  	"
 WORKDIR /root/gym-gazebo2/
 EXPOSE 11596
 ENTRYPOINT ["bash"]
