--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ notifications:
   email:
     recipients:
       - lander@erlerobotics.com
+    on_failure: always
 
 matrix:
   include:
@@ -13,7 +14,7 @@ matrix:
         - required
 
 before_script:
- - echo "Hello gym-gazebo2"
+ - 
 
 script:
  - echo "Hello gym-gazebo2 2"
