--- a/linter/.pylintrc
+++ b/linter/.pylintrc
@@ -263,12 +263,12 @@ ignore-mixin-members=yes
 # (useful for modules/projects where namespaces are manipulated during runtime
 # and thus existing member attributes cannot be deduced by static analysis. It
 # supports qualified module names, as well as Unix pattern matching.
-ignored-modules=numpy, gym_gazebo2
+ignored-modules=numpy, gym_gazebo2, PyKDL
 
 # List of classes names for which member attributes should not be checked
 # (useful for classes with attributes dynamically set). This supports can work
 # with qualified names.
-ignored-classes=numpy, gym_gazebo2
+ignored-classes=numpy, gym_gazebo2, PyKDL
 
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
