--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_script:
 
 script:
  - docker build -t linter .
- - docker run -it -v /tmp/gym-gazebo2:/gym-gazebo2 linter
+ - docker run -v /tmp/gym-gazebo2:/gym-gazebo2 linter
