--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -6,7 +6,9 @@ ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
 
 RUN \
-      apt-get update -qq && apt-get install -qq -y \
+      echo 'Etc/UTC' > /etc/timezone \
+      && ln -s /usr/share/zoneinfo/Etc/UTC /etc/localtime \
+      && apt-get update -qq && apt-get install -qq -y \
          python3-pip \
          python3-numpy \
          python3-sip-dev \
@@ -18,4 +20,5 @@ RUN \
         	billiard \
                 pylint
 COPY ./docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+WORKDIR /gym-gazebo2
 ENTRYPOINT ["docker-entrypoint.sh"]
