add email to travis recipients

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ notifications:
   email:
     recipients:
       - lander@erlerobotics.com
+      - nestor@erlerobotics.com
     on_failure: always
     only: master
 
