--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ matrix:
 before_script:
   - mkdir /tmp/gym-gazebo2
   - mv * /tmp/gym-gazebo2
-  - cd .ci
+  - cd .ci/linter
 
 script:
  - docker build -t linter .
  - docker run -v /tmp/gym-gazebo2:/gym-gazebo2 linter
+ - cd .ci/envs_tests && docker build -t envs .
+ - docker run envs
