--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ matrix:
       sudo:
         - required
 
+cache:
+  ccache: true
+
 before_script:
   - mkdir /tmp/gym-gazebo2
   - mv * /tmp/gym-gazebo2
