--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,6 +40,10 @@ RUN \
         ros-$ROS2_DISTRO-urdf ros-$ROS2_DISTRO-rttest ros-$ROS2_DISTRO-tf2 \
         ros-$ROS2_DISTRO-tf2-geometry-msgs \
         ros-$ROS2_DISTRO-rclcpp-action \
+        ros-$ROS2_DISTRO-cv-bridge \
+        ros-$ROS2_DISTRO-control-msgs \
+        ros-$ROS2_DISTRO-image-transport \
+        ros-$ROS2_DISTRO-gazebo-ros-pkgs \
         libopencv-dev \
       && rm -rf /var/lib/apt/lists/* \
       #Gazebo
@@ -47,8 +51,8 @@ RUN \
       && wget https://raw.githubusercontent.com/AcutronicRobotics/MARA/master/mara-ros2.repos && vcs import src < mara-ros2.repos \
       && wget https://raw.githubusercontent.com/AcutronicRobotics/gym-gazebo2/master/provision/additional-repos.repos && vcs import src < additional-repos.repos \
       #Generete HRIM packages
-      && cd ~/ros2_mara_ws/src/HRIM/installator \
-      && python3 setup.py install && cd .. \
+      && cd ~/ros2_mara_ws/src/HRIM \
+      && pip3 install hrim \
       && hrim generate models/actuator/servo/servo.xml \
       && hrim generate models/actuator/gripper/gripper.xml \
       #Compile the work-space
