--- a/.ci/linter/Dockerfile
+++ b/.ci/linter/Dockerfile
@@ -20,6 +20,7 @@ RUN \
         billiard \
         psutil \
         pylint \
-COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN echo -e '#!/bin/bash\nset -e\n\npylint --rcfile linter/.pylintrc gym_gazebo2\n\nres=$?\n\nif [ $res -ne 0 ]; then\n\techo "Linter error"\n\texit 123\nfi'> /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 WORKDIR /gym-gazebo2
 ENTRYPOINT ["docker-entrypoint.sh"]
