--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ script:
  - docker build -t linter .
  - docker run -v /tmp/gym-gazebo2:/gym-gazebo2 linter
  - cd ../envs_tests && docker build -t envs .
- #- docker run envs
+ - docker run envs
