--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,7 +23,7 @@ RUN \
         python3-pip \
         wget \
       &&  pip3 install \
-          tensorflow==1.12 \
+          tensorflow \
           transforms3d \
           billiard \
           psutil \
