--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,6 +48,7 @@ RUN \
         ros-$ROS2_DISTRO-image-transport \
         ros-$ROS2_DISTRO-rmw-opensplice-cpp \
         ros-$ROS2_DISTRO-gazebo-dev \
+        ros-$ROS2_DISTRO-camera-info-manager \
         libopencv-dev \
       && rm -rf /var/lib/apt/lists/* \
       && wget https://raw.githubusercontent.com/AcutronicRobotics/MARA/master/mara-ros2.repos && vcs import src < mara-ros2.repos \
