--- a/.ci/envs_tests/Dockerfile
+++ b/.ci/envs_tests/Dockerfile
@@ -47,10 +47,11 @@ RUN \
         ros-$ROS2_DISTRO-cv-bridge \
         ros-$ROS2_DISTRO-image-transport \
         ros-$ROS2_DISTRO-rmw-opensplice-cpp \
-        ros-$ROS2_DISTRO-gazebo-dev \
         ros-$ROS2_DISTRO-camera-info-manager \
         libopencv-dev \
       && rm -rf /var/lib/apt/lists/* \
+      #Gazebo
+      && curl -sSL http://get.gazebosim.org | sh \
       && wget https://raw.githubusercontent.com/AcutronicRobotics/MARA/master/mara-ros2.repos && vcs import src < mara-ros2.repos \
       && wget https://raw.githubusercontent.com/AcutronicRobotics/gym-gazebo2/master/provision/additional-repos.repos && vcs import src < additional-repos.repos \
       #Generete HRIM packages
